mias epic site update 200th anniversary of

--- a/040.html
+++ b/040.html
@@ -30,6 +30,17 @@
 	.blocked {
 		pointer-events: none;
 	}
+    .disclaim{
+        background-color: #ffc83d;
+        padding: 5px;
+        font-size: 1.1em;
+        display: inline-block;
+        color: black;
+        outline: 10px solid black;
+        font-weight: bold;
+        font-family: arial;
+        width: 500px;
+    }
 	</style>
 </head>
 <body>
@@ -47,6 +58,12 @@
 	<br>
 </div>
 <a href="LEARNLEARNLEARNLEARNLEARNLEARNLEARNLEARNLEARNLEARNLEARNLEARNLEARNLEARNLEARNLEARNLEARNLEARNLEARNLEARNLEARNLEARNLEARNLEARNLEARNLEARNLEARNLEARNLEARNLEARNLEARNLEARN"> you're a 040 ;( </a>
+<br><br>
+<div class='disclaim'>Disclaimer: Almost all of the following text on this page was generated with some GPT-2 era text prediction model.<br>
+<b>/!\ CW for sex and sexual abuse</b><br>
+Praise the Funny Man
+</div>
+<br>
 <br>
 Hello i am the funny man prophet and i    will share you the story of hte funny men:
 It follows one night as the funny man god said to the funny man he had just protected one of his buddies who was recently raped and he has vowed to the funny man god to protect women and he will so and he does by …
