--- a/blog.html
+++ b/blog.html
@@ -2,14 +2,8 @@
 	<title>
     Blog - Mia's EPIC Site
     </title>
-	<meta name="description" content="11:40 AM - 11/4/2022">
-	<script>
-	function title(){
-		document.title = ""+Math.round(Math.random())+Math.round(Math.random())+Math.round(Math.random())+Math.round(Math.random())+Math.round(Math.random())+" Mia's EPIC Site "+Math.round(Math.random())+Math.round(Math.random())+Math.round(Math.random())+Math.round(Math.random())+Math.round(Math.random());
-		setTimeout(title, 100);
-	}	
-	title()
-	</script>
+	<meta name="description" content="11:40 AM - 11/4/2022 <-- i dont know what this was for">
+
 	<style>
 	html, body {margin:0;padding:0;}
 	.header {background-image:linear-gradient(#bf0000, rgba(0, 0, 0, 0))}
@@ -17,7 +11,7 @@
 	body {background-color:#000000;color:#ffffff}
 	.white {color:rgba(0,0,0,0)}
 	th{text-align: center;font-weight: normal}
-	a{background-color: #F39237;color: white;padding: 5px 100px;text-align: center;text-decoration: none;display: inline-block;border-radius: 10px;}
+	.links{background-color: #F39237;color: white;padding: 5px 100px;text-align: center;text-decoration: none;display: inline-block;border-radius: 10px;}
 	.news{
 		background-color: #2B3A67;
 		width: 1000px;
@@ -43,8 +37,8 @@
 		background-color: #AF8D86;
 		width: 750px;
 		border-radius: 25px 25px 25px 25px;
-		padding-top: 10px;
-		padding-bottom: 50px;
+		padding-top: 20px;
+		padding-bottom: 20px;
 	}
 	.menu1{
 		background-color: #cc0202;
@@ -73,13 +67,22 @@
 		padding-top: 1px;
 		padding-bottom: 10px;
 	}*/
+        .newstable{
+        padding:10px;
+		background-color: #7d645f;
+		width: 700px;
+		border-radius: 25px 25px 25px 25px;
+        /*border-style: solid none none none;
+        border-width: 10px;
+        border-color: #560101;*/
+	}
 	</style>
 </head>
 
 <div class="pp">
 	<center>
 	<div class="menu">
-		<h1>BLOG!!!!</h1>
+		<h1><s>BLOG!!!!</s> updates</h1>
 	<span id="menulinks">time to Blog my Bottom! off! 😂</span>
 	<script src="links.js" type="text/javascript"></script>
 	</div>
@@ -102,10 +105,79 @@ Hour hands gone and now you're feeling strange
 <div class="footer">
 <br><br>
 <div class="bottom">
-<embed type="text/html" src="040.html" width="75%" height="500px">
-<h2>wow blog</h2>
-cant want to use this a Lot
-<br>
+  <table class="newstable">
+
+  <div class="topshelfspyvoiceline"><tr><th>
+    <a href='rss.xml'><img src='assets/img/rss.png'/></a> Date</th><td></td><td>Update</td></tr></div>
+  <tr><th>19/06/2021</th><td>-</td><td>I made this coooool website </td></tr>
+  <tr><th>19/10/2021</th><td>-</td><td>i fixed the bug on the random code page with the timestamp thing</td></tr>
+  <tr><th><p title="Im really sorry its not the 19th i was just bored">2/02/2022</p></th><td>-</td><td><p title="REAL?!?!?!?! OMG but only on this page for now cause im a silly">CSS?!?!?!??!!?!??!!!? WHAT?!?!!!! REAL?!?!?!?!!?!?!</p></td></tr>
+  <tr><th>3/02/2022</th><td>-</td><td>gave random code page css and scroll thingy</td></tr>
+  <tr><th>4/02/2022</th><td>-</td><td><p title='"snazzy" "capitalisation inconsistencies" am i okay?'>replaced youtube button with snazzy new about me page and fixed capitalisation inconsistencies on the other buttons</p></td></tr>
+  <tr><th>5/02/2022</th><td>-</td><td>Changed the way the menu thingy link bar at the top works, now I don't have to update all the pages to update it. I also gave the 404 page css and actual content and removed unused files from the dir and made new tags page</td></tr>
+  <!--<tr><th></th><td></td><td></td></tr> thing from before it supported multiple lines in the news thingies-->
+  <tr><th>6/02/2022</th><td>-</td><td>descriptosn</td></tr>
+  <tr><th>10/02/2022</th><td>-</td><td><span title='took me way too long cause i used a semicolon and thats bad for some reason'>added new thingymabob to random code stuff</span> and added a funny flatulance to the about me page</td></tr>
+  <tr><th>12/10/2022</th><td>-</td><td><span title='and a whole lot of new pages that i havent said about here'>theres now a GAY FLAG 😲😀😀😀😀 page</span></td></tr>
+  <tr><th>31/10/2022</th><td>-</td><td><span title='🙂'>Oh God hes alive</span></td></tr>
+  <tr><th>1/11/2022</th><td>-</td><td><span title='my birthday oh My godnes'>completely revamped games.html and index.html!!!!! (this page!!!)</span></td></tr>
+  <tr><th>19/03/2023</th><td>-</td><td><span>10 new secret pages, 10 changed pages (as of 3/18/23 thats when im writing this lmfao) complete rethingy of aboutthem, update to CSS of index.html and code.html and uh yea, also made this news section look cooler and supports updates having multiple lines now. <s>also, i now discovered the power of <i>hue shift</i> and will abuse it :)</s> UPDATE: please let me talk to big CSS, 😡</span></td></tr>
+  <tr><th>20/08/2023</th><td>-</td><td><span>minor changes also uwu owo aboutme redesign owO and some pride.html additions</span></td></tr>
+  <tr><th>24/08/2023</th><td>-</td><td><span>new cool page destroyer on code.html (it rotates every single element)</span></td></tr>
+  <tr><th>25/08/2023</th><td>-</td><td><span><span title='its not secret so i cant call it that'>+1 bonus page</span>, still working on aboutme.html it was too big imo so im shrinking it</span></td></tr>
+  <tr><th>27/09/2023</th><td>-</td><td><span>sine waves on title page woahhhh 😲😲</span></td></tr>
+  <tr><th>17/11/2023</th><td>-</td><td><span>webring thingyyyyyyyyy at the Top of The Page<br> contains links to the previous and next page in the cool stellaring webring <br>and also a link to its main page</span></td></tr>
+  
+  <tr><th>26/11/2023</th><td>-</td><td><span>massive update, changed like 30 ass pages idk and added 19 pages! updated HELL and stuff. new ways to get to previously inaccesible pages.<br>2 new secret areas<br>put some buttons at the bottom of the page, gumi, silver, sky, vae, mine and then cool blinkie site<br>the thing lists 83 changed files, with ~25 of them being pages<br>still haven't fixed the sine wave lmao</span></td></tr>
+  <tr><th>30/11/2023</th><td>-</td><td><span>added some embeds to my main page and added a buttons page to collect buttons</span></td></tr>
+  <tr><th>13/12/2023</th><td>-</td><td><span>did the john page and added an overcomplicated binary to decimal converter on code.html, also added my new snake game to games.html :33333</span></td></tr>
+  <tr><th>19/12/2023</th><td>-</td><td><span>fixed the sine waves 😲😲😲😲😲😲😲😲😲😲😲😲😲</span></td></tr>
+  <tr><th>07/03/2024</th><td>-</td><td><span>button update :astonished: added some more buttons to the button page including jemmas and updated the link for the palestine one to take you to an offsite link with more links. also changed the css of that page slightlyyyyy. hm what else have i done this update? Started to hide some yummy raspberries around the place,
+    <br> added some fun new secret pages and also an epilepsy warning thing at the top of this page 
+    <br> (SUB UPDATE): fixed the button page cause i had a stray ] at the start ofthe css and most browsers don't ignore that, also spawned the contact page its pretty barebones <br>
+    also made the warning button respawn
+  </span></td></tr>
+  <tr><th>08/03/2024</th><td>-</td><td><span>rearranged main page slightly and finally added a site logo after almost 3 years of coooool website</span></td></tr>
+  <tr><th>09/03/2024</th><td>-</td><td><span>did a visual overhaul of the top of the main page and added some more buttons
+  <br> also added a page where you can view the buttons i've made<br>
+  and added some links, including one to that page, to my about me :3
+  </span></td></tr>
+ 
+  <tr><th>11/03/2024</th><td>-</td><td><span>finished lock A01</span></td></tr>
+  <tr><th>13/03/2024</th><td>-</td><td><span>added the wii-ring :3 and moar button<s>z</s> x3</span></td></tr>
+  <tr><th>23/03/2024</th><td>-</td><td><span>moved the comments from the main page to reduce lag :3 (see the "Guestbook" button at the top), added some more buttons to buttons.html and did some css cleanup of this page slightly only a bit<br>
+  also made contact.html more somethingy<br>
+  (SUB UPDATE): turns out that the html comments thing doesn't like being on a seperate page so uh did some fucky wucky shit that i hate doing to make it working
+  <br>(SUB SUB UPDATE): nvm i found a way better way to fix it :3
+  </span></td></tr>
+  <tr><th>25/07/2024</th><td>-</td><td><span>
+    officially added an RSS feed (haiii if you're reading this there)<br>
+    redid games.html so that they're icons instead of itch.io embeds, and added a favico (FINALLY) to the main 4 pages.<br>
+    added some misc stuff to aboutme and its alt page (which now has a hint towards getting there)<br>
+    added a new glomble to random code stuff, and ofc a few more buttons to the buttons pages<br>
+    fixed some dead links, removed one unused file, and added one secret page  
+  </span></td></tr>
+  
+  <tr><th>8/11/2024</th><td>-</td><td><span>
+    what the flip the site is now under a new domain update: <br>
+    removed some autoloading widgets from the main page*, added a disclaimer on a page<br>
+    more buttons ofc ofc, but also one less button°՞(ᗒᗣᗕ)՞° (but net positive)<br>
+    slightly lowered the brightness of the banner at the top of this page<br>
+    moved this page from index.html to home.html, index.html is now a splash page thingy<br>
+    added some more pages and fixed an unintentionally loud sound <br>
+    changed some wording around on the main page <br>
+    moved the changelog to this page <br>
+    
+    <!--
+    <br>
+    *<s>including john.citrons.xyz becuase its down :cccc</s><br>
+    (edIT: nevermind its back up again yipppee yahoo but it still off the main page)-->
+    
+  </span></td></tr>
+
+  
+  <tr><th></th><td></td><td></td></tr>
+  </table>
 </div>
 </div>
 </div>
