--- a/buttons.html
+++ b/buttons.html
@@ -156,8 +156,9 @@ click on a button to go to the respective site :3 <br><br>
 <!--<a href='https://arab.org/click-to-help/palestine/' target='_blank'><img src='assets/art/88x31palestine.png'></a>-->
 <a href='https://blinkies.cafe' target='_blank'><img src='https://blinkies.cafe/b/display/blinkiesCafe-badge.gif' alt='blinkies.cafe | make your own blinkies!'></a>
 <a href='https://www.tumblr.com/sulfurcosmos/732456971539775488/how-you-can-help-palestine' target='_blank'><img src='assets/art/88x31palestine.png'></a>
+<a href="https://debtdeath.neocities.org/buttons"><img src="assets/buttons/debtdeath-alwayswillbe.png"></a>
 <a href="https://transbro.neocities.org/"><img src="assets/buttons/transbro.gif"></a>
-
+<a href="https://thepersonever.net/" target=blank><img src="https://thepersonever.net/thepersoneverbutton.gif"></a>
 <a href="https://chiitopia.neocities.org"><img src="https://chiitopia.neocities.org/images/balls.png" alt="chiitopia"></a>
 
 <a href='https://motan.gay/' target='_blank'><img src='assets/buttons/motan.png'></a>
@@ -177,7 +178,7 @@ click on a button to go to the respective site :3 <br><br>
 
 <a href="https://committy.glitch.me"><img src="https://sbig2023-committy.glitch.me/assets/img/committy_button.jpg"></a>
 <a href="https://wynns-wonderful-pixel-paradise.neocities.org/"><img src="assets/buttons/pixelparadise.gif"></a>
-<a href="https://goop.house/"><img src="assets/buttons/goop.gif"></a>
+<!--<a href="https://goop.house/"><img src="assets/buttons/goop.gif"></a>-->
 <a href="https://yesterweb.org/no-to-web3/"><img src="assets/buttons/web3.gif"/></a>
 <a class='fallercont' href="javascript:bgbreak()"><img id='faller' src="assets/art/warningbtn.png"/></a>
 
@@ -204,14 +205,12 @@ click on a button to go to the respective site :3 <br><br>
 <a href="https://nepeta.pet/"><img src="assets/buttons/nepeta.gif"> </a>
 <a href="mybuttons.html#special"><img src="assets/art/FTSbutton/full.png"> </a>
 <a href="https://virtualobserver.moe"><img src="assets/buttons/virtualobserver.png"> </a>
-<a class=' emptbutt'></a>
-<a class=' emptbutt'></a>
-<a class=' emptbutt'></a>
-<a class=' emptbutt'></a>
-<a class=' emptbutt'></a>
-<a class=' emptbutt'></a>
-<a class=' emptbutt'></a>
-<a class=' emptbutt'></a>
+<a href="https://ublockorigin.com/"><img class='bttn' src="assets/buttons/ublock.png"/></a>
+<a href="https://kitsunezero4.neocities.org"><img src="assets/buttons/kitsune.png"></a>
+<a href="https://debtdeath.neocities.org/buttons"><img src="assets/buttons/debtdeath-trans.png"></a>
+<!-- Bumpin That button taken from https://tenor.com/view/brat-bumpin-that-360-365-gif-8969382079261696745 (it was very broken i had to fix it)-->
+<a href="https://www.charlixcx.com/"><img src="assets/buttons/bumpinthat.gif"></a>
+<a href="https://cqrcin0.nekoweb.org/" target="_blank"><img src="https://cqrcin0.nekoweb.org/cqrbutton.png"></a>
 <a class=' emptbutt'></a>
 <a class=' emptbutt'></a>
 <a class=' emptbutt'></a>
