--- a/mybuttons.html
+++ b/mybuttons.html
@@ -2,7 +2,12 @@
 	<title>
     BUTTONS THAT ARE MINE WOO HOO
     </title>
-	<meta name="description" content="my ones!!!!">
+	<meta name="description" content="my ones!!!!
+    button me yeah yeah yeah
+    button me yeah yeah yea
+    so i can rejoin the buttonland
+    so i can rejoinTHE BUTTONLAND!
+    ">
 	<!--<link rel="icon" type="image/x-icon" href="assets/favicon.ico">-->
 	<style>
 	html, body {margin:0;padding:0;}
@@ -63,23 +68,28 @@
 	<br>
 </div>
 all here free to use <b>with credit</b> :3<br><br>
-<h2> ones for this site :3 </h2>
+<h2> buttons for this site :3 </h2>
 download or link to whichever one fits your site the most and make it link to my site :3<br><br>
-<img class='bttn' src="assets/buttons/button.gif" onclick='' height="62px" width="176px"/><br>
-<img class='bttn' src="assets/buttons/button2.png" onclick='' height="62px" width="176px"/><br>
+<img class='bttn' src="assets/buttons/button2.png" onclick='' height="62px" width="176px"/>
+<img class='bttn' src="assets/buttons/button4.png" onclick='' height="62px" width="176px"/>
 <img class='bttn' src="assets/buttons/button3.gif" onclick='' height="62px" width="176px"/><br>
+<img class='bttn' src="assets/buttons/button5.png" onclick='' height="62px" width="176px"/>
+<img class='bttn' src="assets/buttons/button.gif" onclick='' height="62px" width="176px"/>
+<img class='bttn' src="assets/buttons/button6.png" onclick='' height="62px" width="176px"/>
 <!--<img src="assets/buttons/button3.png" onclick='' height="62px" width="176px"/><br>-->
 
-<h2> others :O </h2>
+<h2> other buttons I have made :O </h2>
 
 <img class='bttn' src="assets/art/88x31palestine.png" onclick='' height="62px" width="176px"/>
-<img class='bttn' src="assets/art/88x31static.gif" onclick='' height="62px" width="176px"/>
+<img class='bttn' src="assets/art/88x31static.gif" onclick='' height="62px" width="176px"/><br>
 <img class='bttn' src="assets/art/warningbtn.png" onclick='' height="62px" width="176px"/>
+<img class='bttn' src="assets/art/FTSbutton/full.png" onclick='' height="62px" width="176px"/>
 
 <br>
 <br>
 <h2 id='special'> special buttons </h2>
 
+interactive Find The Silver button!!!<br><br>
 <div style='background-image: url("https://miastonished.github.io/assets/art/FTSbutton/BG.png"); width: 88px; height: 31px; position:relative; transform: scale(200%);'>
     <script>
     function Find8831(theSilver){
@@ -108,7 +118,7 @@ download or link to whichever one fits your site the most and make it link to my
 </div>
 </pre>
 <br>
-details: 88px wide by 31px tall (button standard), if it looks blurry search how to disable interpolation in css
+details for buttons: 88px wide by 31px tall (button standard), if it looks blurry search how to disable interpolation in css, wash dark buttons seperately
 <!--
 <br><br>
 <img src="assets/buttons/button.gif" onclick='' height="31px" width="88px"/>
