--- a/greenPrison.html
+++ b/greenPrison.html
@@ -76,6 +76,8 @@
     }
 	</style>
     <!--<script> alert('epilepsy warning');</script>-->
+    
+    <!--<script src='raspberries.js' type='text/javascript'></script>-->
 </head>
 <body>
 <div> <!--class="header"--->
@@ -136,6 +138,7 @@ function payload(){
     document.body.style.background = 'black';
     bodySine();
     backButton.style.color = '#0f0';
+    localStorage.setItem("greenRaspberry","True");
     backButton.href = 'raspberry.html';
 }
 
