--- a/GIVEMESOMEBODYTO.......html
+++ b/GIVEMESOMEBODYTO.......html
@@ -113,7 +113,7 @@
 <br>
 <div class="gracefu"> and it is not graceful </div>
 <br>
-<div class="gracef"> and it is hurting u<a href="disease.html">s all</a> </div>
+<div class="gracef"><a href="disease.html"> and it is bringing us pain</a> </div>
 <script>
 function fart(){
 	alert("check this later lmao");
