--- a/aboutme.html
+++ b/aboutme.html
@@ -79,19 +79,19 @@
 	}
 	.p1{
         font-size: 1.25em;
-	    color: #BCBCBC;
-		text-shadow:
+	    color: #000;
+		/*text-shadow:
 		-2px -1px 0 #000,
-		2px 1px 0 #FFF;
+		2px 1px 0 #FFF;*/
         
 	}
 	.p3{
         font-size: 1.25em;
-	    color: #BCBCBC;
+	    color: #000;
         width: 500px;
-		text-shadow:
+		/*text-shadow:
 		-2px -1px 0 #000,
-		2px 1px 0 #FFF;
+		2px 1px 0 #FFF;*/
         
 	}
 	.p2{
@@ -328,12 +328,12 @@
 <br>
 <br>
 <br>
-<p class="p1">Hi im Mia, I go by she/they pronouns so if you ever want to talk about me behind my back now you know :3</p>
-<p class="p3">my gender is ninety nine point nine (followed by twelve duodecillion to the power of ten to the power of one hundered nines and then a 7) percent girl and the remainder is several thousandish mispellings of girl</p> 
+<p class="p1">haiiii im mia (she/they/it)</p>
+<p class="p1">my gender is <code>("99."+("9"*(12*10^39))+"7%")</code> girl <br>(the remaining ...03% is just several billion mispellings of girl)</p> 
 <p class="p1">I built this website out of tons of metasyntactic variables and monster energy</p>
 <p class="p1">Thats all you need to know ig</p>
-<div class="yt"><a class="yt" href="https://www.youtube.com/@miastonished"> My Youtube </a></div>
-<div class="tm"><a class="tm" href="https://awnemia.tumblr.com/"> My Tumblr </a></div>
+<!--<div class="yt"><a class="yt" href=""> My Youtube </a></div>-->
+<!--<div class="tm"><a class="tm" href=""> My Tumblr </a></div>-->
 <div class="bt"><a class="bt" href="butter.png"> Butter Images </a></div>
 <div class="ct"><a class="ct" href="contact.html"> Contact Me </a></div>
 <div class="bc"><a class="bc" href="buttons.html"> Button Collection </a></div>
