--- a/index.html
+++ b/index.html
@@ -37,6 +37,12 @@
         color: #d00;
         text-decoration: none;
     }
+    .quotcookiesquot{
+        font-size: 12px;
+    }
+    .smaller{
+        font-size: 10px;
+    }
 	</style>
 </head>
 <body>
@@ -47,10 +53,19 @@
 <br><br><br>
 <center> <!-- center tags for Lynx compatability -->
 <h2>WELCOME TO MIAS EPIC SITE!!!</h2><br>
-This website uses iframes (not many) and javascript.<br>
-It was made for a 1920 by 1080 screen and Firefox <br>
-May not look too good on other screensizes/browsers xP<br>
+DISCLAIMERS (plox read):<br>
+
+This website uses iframes and javascript.<br>
+<!--May not look too good on other screensizes/browsers xP<br>-->
 It contains lots of gifs and some fast moving stuff!<br>
+<span class='quotcookiesquot'>
+It was made for a 1920 by 1080 screen and Firefox <br>
+This site uses localStorage to store some things for easter eggs<br>
+But that is only if you do specific things, and isn't sent to anyone<br>
+</span>
+<span class='smaller'>
+(by entering you're consent-ering to that stuff) :3
+</span>
 
 <h1><a href='home.html'>[ Enter ➤ ]</a></h1>
 <h4><a href='minimal/home.html'>[ Super Minimal Site ➤ ]</a></h4>
