--- a/inheritants.html
+++ b/inheritants.html
@@ -1,8 +1,8 @@
 <head>
 	<title>
-    foo
+    inheritants.
     </title>
-	<meta name="description" content="foo manny">
+	<meta name="description" content="Hello">
 	<!--<link rel="icon" type="image/x-icon" href="assets/favicon.ico">-->
 	<style>
     
@@ -51,7 +51,7 @@
 <br>
 <s><a href='mypage.html'>Miriam</a></s> <br>
 <a href='home.html'>Mia</a> <br>
-<a href='blazeStr.html'>Blaze</a> <br>
+<a href='blaze/'>Blaze</a> <br>
 </h2>
 
 
@@ -68,7 +68,7 @@ function successload(){
 document.getElementById('loadHere').innerHTML = "XML Parsing Error: syntax error <br>\
 Location: /home/JDSFODSKOSDK/.inheritants.xml<br>\
 Line Number 1, Column 1: <br>\
-Stop it. No$% <br>\
+I wont let you do this to us an€ä” <br>\
 ^";
 }
 </script>
