--- a/mybuttons.html
+++ b/mybuttons.html
@@ -69,7 +69,7 @@
 </div>
 all here free to use <b>with credit</b> :3<br><br>
 <h2> buttons for this site :3 </h2>
-download or link to whichever one fits your site the most and make it link to my site :3<br><br>
+download whichever one fits your site the most and make it link to my site :3<br><br>
 <img class='bttn' src="assets/buttons/button2.png" onclick='' height="62px" width="176px"/>
 <img class='bttn' src="assets/buttons/button4.png" onclick='' height="62px" width="176px"/>
 <img class='bttn' src="assets/buttons/button3.gif" onclick='' height="62px" width="176px"/><br>
