--- a/yolo.html
+++ b/yolo.html
@@ -2196,7 +2196,7 @@ Th(～￣▽￣)～ f♪(´▽｀)nny m(～￣▽￣)～n stφ(゜▽゜*)♪nd 
 <div class='invis' style='top: 1669px;left: 47%;'>666</div>
 <div class='invis' style='top: 446px;left: 84%;'>666</div>
 <div class='invis' style='top: 4800px;left: 46%;'>666</div>
-<div class='invis' style='top: 40px;left: 89%;'><a class='invis' href='twomorepairsofheadphones.html'>666</a></div>
+<div class='invis' style='top: 40px;left: 89%;'><a class='invis' href='twomorepairsofheadphones.html?gay=true'>666</a></div>
 
 
 D(^_-)db(-_^)n't `(*>﹏<*)′ l(^_-)db(-_^)(^_-)db(-_^)k l`(*>﹏<*)′k(～￣▽￣)～ `(*>﹏<*)′ wφ(゜▽゜*)♪nt φ(゜▽゜*)♪ t(^_-)db(-_^)y?
