--- a/blog.html
+++ b/blog.html
@@ -174,6 +174,15 @@ Hour hands gone and now you're feeling strange
     (edIT: nevermind its back up again yipppee yahoo but it still off the main page)-->
     
   </span></td></tr>
+  
+  <tr><th>7/08/2025</th><td>-</td><td><span>
+    replaced shitty secret pages that added nothing to the site<br>
+    updated a ton of shit<br>
+    new pages <br>
+    things might start to make sense now<br>
+    irl im very sleepy eepy thats whats been going on meow meowm oew :3
+    
+  </span></td></tr>
 
   
   <tr><th></th><td></td><td></td></tr>
