--- a/buttons.html
+++ b/buttons.html
@@ -148,7 +148,7 @@ click on a button to go to the respective site :3 <br><br>
 
 <a href='https://skysupercharged.github.io' target='_blank'><img src='assets/buttons/sky.png'></a>
 <a href='https://vaelaris.github.io' target='_blank'><img src='assets/buttons/vae.png'></a>
-<a href="https://hiyajemma.github.io/"><img src="https://hiyajemma.github.io/images/webring/derredbutton.png"></a>
+<!--<a href="https://hiyajemma.github.io/"><img src="https://hiyajemma.github.io/images/webring/derredbutton.png"></a>-->
 <a class='button88x31' href="https://xzan-corvus.github.io/"><img src="assets/buttons/xzan_proto.gif"></a>
 <a class='button88x31' href="https://fabledbugs.github.io/"><img src="assets/buttons/bugs.png"></a>
 
@@ -211,6 +211,9 @@ click on a button to go to the respective site :3 <br><br>
 <!-- Bumpin That button taken from https://tenor.com/view/brat-bumpin-that-360-365-gif-8969382079261696745 (it was very broken i had to fix it)-->
 <a href="https://www.charlixcx.com/"><img src="assets/buttons/bumpinthat.gif"></a>
 <a href="https://cqrcin0.nekoweb.org/" target="_blank"><img src="https://cqrcin0.nekoweb.org/cqrbutton.png"></a>
+<a href="https://spax.zone/"><img src="https://spax.zone/buttons/spaxdotzone.gif"></a>
+<a href="https://allsop-lancaster.com/knf/links.html"><img src="assets/buttons/knf.gif"></a>
+<a href=""><img src="assets/buttons/2019.gif"></a>
 <a class=' emptbutt'></a>
 <a class=' emptbutt'></a>
 <a class=' emptbutt'></a>
