--- a/scrap.html
+++ b/scrap.html
@@ -7,13 +7,14 @@
 	<style>
 	html, body {margin:0;padding:0;font-family: "Times New Roman", Times, serif;}
 	body {
-		background-image: url("assets/img/3536314u861c9xey8.gif");
-		background-size: 200px 200px;
+		//background-image: url("assets/img/3536314u861c9xey8.gif");
+		background-image: url("assets/img/PenisEnlargement.jpg");
+		background-size: 150px 150px;
 		color:#ffffff;
 	}
 	.white {color:rgba(0,0,0,0)}
 	th{text-align: center;font-weight: normal}
-	.links{animation: yipee 0.25s linear infinite;background-color: #000000 ;color: white;padding: 10px 10px;text-align: center;text-decoration: none;display: inline-block;height:10px;width:90px;font-size:10px;left:50px;position:relative;}
+	.links{animation: yipee 3s linear infinite;background-color: #000000 ;color: white;padding: 10px 10px;text-align: center;text-decoration: none;display: inline-block;height:10px;width:90px;font-size:10px;left:50px;position:relative;}
 	a{color:#550000 }
 	button{background-color: #550000 ; font-family: funny}
 	p{color:#550000 }
@@ -70,7 +71,6 @@
 		height: 100%;
 		position: absolute;
 		top: 20px;
-		animation: yipee 10s linear infinite;
 		left: 50%;
 	}	
 	.dolp2 {
@@ -93,9 +93,9 @@
 	.popup {
 		position: absolute;
 		width: 500px;
-		height: 500px;
-		top: 50%;
-		left: 50%;
+		height: 250px;
+		top: 1000px;
+		left: 100px;
 		background-image: url("assets/img/visitor.webp");
 		opacity: 1;
 		z-index: 4;
@@ -109,8 +109,8 @@
     }
 	</style>
 	<script>
-	//confirm("Hello can you \"Please\" Join my Gift Crad GiverWay?!");
-	confirm("this Page contains Flashing Lights!!!!!!!! Whoops!");
+	confirm("Hello can you \"Please\" Join my Gift Crad GiverWay?!");
+	//confirm("this Page contains Flashing Lights!!!!!!!! Whoops!");
 	function farton(x){
 		x.src = "assets/art/silverad2.png";	
 	}
@@ -134,23 +134,21 @@ ANDREOLOGY (REDIRECTED FROM ANDROELOGY) NOT TO BE CONFUSED WITH ANDROLOGY, AN%00
 <div class="cruel"> 
 <div class="in92">wrq</div>
 <div class="rust">Yqweqwrekfniogwjeitjioawrjwaiejrwokerowkeqqwkeoqwkeoqwkoekqwopaoergpwakeqweel</div>
-<img class="dolp" src="assets/img/emmet.gif"/>
-<img class="dolp2" src="assets/img/emmet.gif"/>
-<img class="dolp3" src="assets/img/emmet.gif"/>
+<img class="dolp" src="assets/img/emmet2.gif"/>
 </div>
 BLOOD NBLOOD BLOOD LBOOD
 <div class="the"></div>
 <div class="millennial"></div>
 <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 
-<a href='core.html' class='coRedirect'>
-CLICK HERE TO LEAVE IM BE
+<a href='lndex.html' class='coRedirect'>
+CLICK HERE TO RETURN IM BEIN
 
 
 </a>
 <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 <br>
-<img onmouseover="farton(this);" onmouseout="suckfartsoutof(this);" src="assets/art/silverad1.png" width="100px"/>
+<a href='disease.html'><img onmouseover="farton(this);" onmouseout="suckfartsoutof(this);" src="assets/art/silverad1.png" width="100px"/></a>
 <br>
 aweitgjowkeoakoqwekaowkeptawektowakopekraowkroawekqw
 ew<br>qwoeQQEOQWEKqoek
