--- a/home.html
+++ b/home.html
@@ -564,7 +564,7 @@ slider5.value = 0;
 variable5.innerHTML = "???";
 slider5.oninput = function() {
   variable5.innerHTML = ""+slider5.value +"???";
-  if(slider5.value > 99){ window.location.href = "YmxvYg.html"; };
+  //if(slider5.value > 99){ window.location.href = "YmxvYg.html"; };
 }
 
 checkboxx.oninput = function() {
@@ -609,7 +609,7 @@ slider1.oninput = function() {
 <a class='button88x31' href='https://vaelaris.github.io' target='_blank'><img src='assets/buttons/vae.png'></a>
 <br>
 <a class='button88x31' href='miasepicsite/' target='_blank'><img src='assets/art/placeholderbutton.gif'></a>
-<a class='button88x31' href="https://hiyajemma.github.io/"><img src="https://hiyajemma.github.io/images/webring/derredbutton.png"></a>
+add button here 
 <a class='button88x31' href="https://xzan-corvus.github.io/"><img src="assets/buttons/xzan_proto.gif"></a>
 <a class='button88x31' href="https://fabledbugs.github.io/"><img src="assets/buttons/bugs.png"></a>
 
